# sahara-plugin-vanilla

./: .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  errors.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
doc/source/user/: index.rst  vanilla-plugin.rst
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ne/LC_MESSAGES/: releasenotes.po
sahara_plugin_vanilla/: i18n.py
sahara_plugin_vanilla/locale/de/LC_MESSAGES/: sahara_plugin_vanilla.po
sahara_plugin_vanilla/locale/en_GB/LC_MESSAGES/: sahara_plugin_vanilla.po
sahara_plugin_vanilla/locale/id/LC_MESSAGES/: sahara_plugin_vanilla.po
sahara_plugin_vanilla/locale/ne/LC_MESSAGES/: sahara_plugin_vanilla.po
sahara_plugin_vanilla/plugins/vanilla/: confighints_helper.py  edp_engine.py  plugin.py  utils.py  versionfactory.py
sahara_plugin_vanilla/plugins/vanilla/hadoop2/: config.py  config_helper.py  edp_engine.py  keypairs.py  oozie_helper.py  run_scripts.py  scaling.py  starting_scripts.py  utils.py  validation.py
sahara_plugin_vanilla/plugins/vanilla/v2_7_1/: config_helper.py  edp_engine.py  versionhandler.py
sahara_plugin_vanilla/plugins/vanilla/v2_7_5/: config_helper.py  edp_engine.py  versionhandler.py
sahara_plugin_vanilla/plugins/vanilla/v2_8_2/: config_helper.py  edp_engine.py  versionhandler.py
sahara_plugin_vanilla/tests/: __init__.py
(+22 files in other folders)
