[metadata]
name = sahara-plugin-vanilla
summary = Vanilla Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_plugin_vanilla

[entry_points]
sahara.cluster.plugins =
    vanilla = sahara_plugin_vanilla.plugins.vanilla.plugin:VanillaProvider

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[compile_catalog]
directory = sahara_plugin_vanilla/locale
domain = sahara_plugin_vanilla

[update_catalog]
domain = sahara_plugin_vanilla
output_dir = sahara_plugin_vanilla/locale
input_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_vanilla/locale/sahara_plugin_vanilla.pot

[wheel]
universal = 1
